--- a/7.7/sass/style.scss
+++ b/7.7/sass/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,700,900');
+
 * {
     box-sizing: border-box;
 }
@@ -40,7 +42,12 @@ body {
 .col-11 {width: 91.66%;}
 .col-12 {width: 100%;}
 
+$fonts: 'Monteserrat', sans-serif;
+
+
+
 /* Header */
+
 header {
     background-image: url(../images/hero.jpg);
     background-repeat: no-repeat;
@@ -48,80 +55,78 @@ header {
     width: 100%;
     background-size: cover;
     background-position: top;
+
+    nav img {
+        padding: 35px 0;
+    }
+
+    nav {
+        ul {
+            margin: 0;
+            padding: 0;
+            list-style-type: none;
+            float: right;
+        }
+
+        li {
+            display: inline-block;
+            font-family: $fonts;
+        }
+
+        a {
+            line-height: 30x;
+            padding: 40px 12px;
+            display: block;
+            color: #FFF;
+            text-decoration: none;
+            text-transform: uppercase;
+            font-weight: bolder;
+            &:hover {
+                color: #FED136;
+            }
+        }
+
+        p {
+            float: left;
+            color: white;
+            font-size: 40px;
+        }
+    }
+
+    .main {
+        h1 {
+            text-align: center;
+            margin-top: 100px;
+            color: white;
+            font-size: 40px;
+            font-style: italic;
+        }
+
+        p {
+            text-align: center;
+            color: white;
+            font-size: 70px;
+            text-transform: uppercase;
+            font-family: $fonts;
+            font-weight: 700;
+        }
+
+        .button {
+            border-radius: 5px;
+            width: 200px;
+            height: 50px;
+            text-align: center;
+            background-color: #FED136;
+            border-color: #FED136;
+            color: #FFF;
+            text-size: 16px;
+            margin: 60px auto 0 auto;
+            cursor: pointer;
+            padding-top: 15px;
+            text-transform: uppercase;
+            font-family: $fonts;
+        }
+    }
 }
 
-header>nav img {
-    padding: 35px 0;
-}
-
-header>nav ul {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    float: right;
-}
-
-header>nav ul>li {
-    display: inline-block;
-}
-
-header>nav ul>li>a {
-    line-height: 30x;
-    padding: 40px 12px;
-    display: block;
-    color: #fff;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bolder;
-}
-
-a:hover {
-    color: #ED145B;
-}
-
-header>nav> p {
-    float: left;
-    color: white;
-    font-size: 20px;
-}
-
-header>nav>.main h1 {
-    text-align: center;
-    padding-top: 200px;
-    color: white;
-    font-size: 40px;
-}
-
-header>nav>.main_bold {
-    font-weight: bold;
-}
-
-header>nav>.main p {
-    text-align: center;
-    padding-top: 40px;
-    color: white;
-    font-size: 20px;
-}
-
-header>nav>.main hr {
-    border-color: #ED145B;
-    height: 2px;
-    width: 200px;
-}
-
-header>nav>.main>.button {
-    border-radius: 30px;
-    width: 200px;
-    height: 50px;
-    text-align: center;
-    background-color: #ED145B;
-    border-color: #ED145B;
-    color: white;
-    text-size: 16px;
-    margin: 60px auto 0 auto;
-    cursor: pointer;
-    padding-top: 15px;
-    text-transform: uppercase;
-}
-
-/* Header */
+/* End Header */
