--- a/7.7/css/style.css
+++ b/7.7/css/style.css
@@ -156,5 +156,62 @@ header .main .button {
 }
 
 /* End Header */
+/* Section Services */
+.services {
+  padding-bottom: 70px;
+}
+
+.services .serv h1 {
+  text-align: center;
+  font-family: "Monteserrat", sans-serif;
+  text-transform: uppercase;
+  font-size: 40px;
+  color: #212121;
+  margin-top: 120px;
+}
+
+.services .serv p {
+  text-align: center;
+  color: #727272;
+  font-size: 20px;
+  margin-top: -30px;
+}
+
+.services .services_img {
+  margin-top: 100px;
+  text-align: center;
+  font-family: "Monteserrat", sans-serif;
+}
+
+.services .services_img p {
+  padding: 5px 20px;
+  color: #727272;
+}
+
+.icon-serv {
+  width: 70px;
+  height: 70px;
+  color: #FED136;
+  border: 3px solid #FED136;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 40px;
+}
+
+.shopping-basket,
+.laptop,
+.lock {
+  color: #FED136;
+  background-color: #FFF;
+}
+
+.shopping-basket:hover,
+.laptop:hover,
+.lock:hover {
+  color: #FFF;
+  background-color: #FED136;
+}
+
+/* End Section Service */
 
 /*# sourceMappingURL=style.css.map */
