Add section Portfolio and modification style

--- a/7.7/css/style.css
+++ b/7.7/css/style.css
@@ -213,5 +213,89 @@ header .main .button {
 }
 
 /* End Section Service */
+/* Section Portfolio */
+.portfolio {
+  padding-top: 40px;
+  padding-bottom: 120px;
+  background-color: #F7F7F7;
+}
+
+.portfolio .portfolio_header h1 {
+  margin-top: 50px;
+  text-align: center;
+  padding-top: 40px;
+  text-transform: uppercase;
+  font-family: "Monteserrat", sans-serif;
+  font-size: 40px;
+}
+
+.portfolio .portfolio_header p {
+  text-align: center;
+  color: #727272;
+  font-size: 20px;
+  margin-top: -30px;
+  padding-bottom: 50px;
+}
+
+.portfolio .items .items_img .items_content {
+  height: 400px;
+  max-width: 289px;
+  text-align: center;
+  background-color: #FFF;
+  margin: 38px;
+}
+
+.portfolio .items .items_img .items_content h1 {
+  font-family: "Monteserrat", sans-serif;
+  font-size: 18px;
+  margin-top: 20px;
+}
+
+.portfolio .items .items_img .items_content p {
+  font-family: "Monteserrat", sans-serif;
+  font-size: 14px;
+  font-style: italic;
+  margin-top: -15px;
+  font-weight: 600;
+  color: #727272;
+}
+
+.pic {
+  height: 100%;
+  position: relative;
+}
+
+.pic:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.pic:hover .fa {
+  opacity: 1;
+}
+
+.layer {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  transition: .8s;
+  color: #fff;
+  text-align: center;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.layer:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.layer .fa {
+  position: relative;
+  top: 50%;
+  opacity: 0;
+  transition: .8s;
+}
+
+/* End Section Portfolio */
 
 /*# sourceMappingURL=style.css.map */
