--- a/7.7/css/style.css
+++ b/7.7/css/style.css
@@ -297,5 +297,71 @@ header .main .button {
 }
 
 /* End Section Portfolio */
+/* Section About Us */
+.about {
+  margin-top: 50px;
+}
+
+.about .about_header h1 {
+  text-align: center;
+  padding-top: 40px;
+  font-family: "Monteserrat", sans-serif;
+  text-transform: uppercase;
+  font-size: 40px;
+}
+
+.about .about_header p {
+  text-align: center;
+  color: #727272;
+  font-size: 20px;
+  margin-top: -30px;
+  padding-bottom: 80px;
+}
+
+.about hr {
+  width: 1px;
+  height: 120px;
+  border: 1px solid #F1F1F1;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
+
+.about img {
+  opacity: 0.5;
+}
+
+.about img:hover {
+  opacity: 1;
+  cursor: pointer;
+  transition: .9s;
+}
+
+.right {
+  font-family: "Monteserrat", sans-serif;
+  text-align: right;
+  margin: 0 40px 15px 0;
+}
+
+.right_h2 {
+  font-family: "Monteserrat", sans-serif;
+  text-align: right;
+  margin-right: 40px;
+  margin-top: -10px;
+}
+
+.left {
+  font-family: "Monteserrat", sans-serif;
+  text-align: left;
+  margin: 0 0 15px 40px;
+}
+
+.left_h2 {
+  font-family: "Monteserrat", sans-serif;
+  text-align: left;
+  margin-left: 40px;
+  margin-top: -10px;
+}
+
+/* End Section About Us */
 
 /*# sourceMappingURL=style.css.map */
