--- a/7.7/css/style.css
+++ b/7.7/css/style.css
@@ -363,5 +363,131 @@ header .main .button {
 }
 
 /* End Section About Us */
+/* Section Team */
+.team {
+  background-color: #F9F9F9;
+  text-align: center;
+}
+
+.team .team_header h1 {
+  font-family: "Monteserrat", sans-serif;
+  font-size: 40px;
+  padding-top: 100px;
+  text-transform: uppercase;
+}
+
+.team .team_header p {
+  font-family: "Monteserrat", sans-serif;
+  color: #727272;
+  font-size: 20px;
+  margin-top: -30px;
+  padding-bottom: 80px;
+}
+
+.team .team_content {
+  padding-bottom: 50px;
+}
+
+.team .team_content h1 {
+  font-family: "Monteserrat", sans-serif;
+  font-size: 20px;
+}
+
+.team .team_content p {
+  font-family: "Monteserrat", sans-serif;
+  font-size: 15px;
+  color: #727272;
+}
+
+.team .team_content img {
+  width: 241px;
+  max-width: 100%;
+  height: 100%;
+  opacity: 0.7;
+}
+
+.team .team_content img:hover {
+  opacity: 1;
+  cursor: pointer;
+  transition: .9s;
+}
+
+.icon-btn {
+  width: 35px;
+  height: 35px;
+  border: 0;
+  color: #FFFFFF;
+  border-radius: 50%;
+  margin: 3px;
+  cursor: pointer;
+  font-size: 16px;
+  border: 2px solid #111111;
+}
+
+.icon-btn:hover {
+  transform: scale(1.1);
+}
+
+.twitter {
+  color: #111111;
+  background-color: #FFF;
+}
+
+.twitter:hover {
+  background-color: #4099FF;
+  color: #FFFFFF;
+  border: 1px solid #4099FF;
+}
+
+.facebook {
+  color: #111111;
+  background-color: #FFF;
+}
+
+.facebook:hover {
+  background-color: #3B5998;
+  color: #FFFFFF;
+  border: 1px solid #3B5998;
+}
+
+.google-plus {
+  color: #111111;
+  background-color: #FFF;
+}
+
+.google-plus:hover {
+  background-color: #DB5A3C;
+  color: #FFFFFF;
+  border: 1px solid #DB5A3C;
+}
+
+.pinterest {
+  color: #111111;
+  background-color: #FFF;
+}
+
+.pinterest:hover {
+  background-color: #DB5A3C;
+  color: #FFFFFF;
+  border: 1px solid #DB5A3C;
+}
+
+.promotion_text p {
+  text-align: center;
+  padding: 20px 0 40px 0;
+  color: #767676;
+}
+
+.promotion {
+  text-align: center;
+  margin: 50px;
+}
+
+.promotion img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* End Section Team */
 
 /*# sourceMappingURL=style.css.map */
