--- a/7.7/sass/style.scss
+++ b/7.7/sass/style.scss
@@ -348,3 +348,129 @@ header {
 }
 
 /* End Section About Us */
+
+/* Section Team */
+
+.team {
+    background-color: #F9F9F9;
+    text-align: center;
+
+    .team_header {
+        h1 {
+            font-family: $fonts;
+            font-size: 40px;
+            padding-top: 100px;
+            text-transform: uppercase
+        }
+
+        p {
+            font-family: $fonts;
+            color: #727272;
+            font-size: 20px;
+            margin-top: -30px;
+            padding-bottom: 80px;
+        }
+    }
+
+    .team_content {
+        padding-bottom: 50px;
+
+        h1 {
+            font-family: $fonts;
+            font-size: 20px;
+        }
+
+        p {
+            font-family: $fonts;
+            font-size: 15px;
+            color: #727272;
+        }
+
+        img {
+            width: 241px;
+            max-width: 100%;
+            height: 100%;
+            opacity: 0.7;
+            &:hover {
+                opacity: 1;
+                cursor: pointer;
+                transition: .9s;
+            }
+        }
+    }
+}
+
+.icon-btn {
+    width: 35px;
+    height: 35px;
+    border: 0;
+    color: #FFFFFF;
+    border-radius: 50%;
+    margin: 3px;
+    cursor: pointer;
+    font-size: 16px;
+    border: 2px solid #111111;
+    &:hover {
+        transform: scale(1.10);
+    }
+}
+
+.twitter {
+    color: #111111;
+    background-color: #FFF;
+    &:hover {
+        background-color: #4099FF;
+        color: #FFFFFF;
+        border: 1px solid #4099FF;
+    }
+}
+
+.facebook {
+    color: #111111;
+    background-color: #FFF;
+    &:hover {
+        background-color: #3B5998;
+        color: #FFFFFF;
+        border: 1px solid #3B5998;
+    }
+}
+
+.google-plus {
+    color: #111111;
+    background-color: #FFF;
+    &:hover {
+        background-color: #DB5A3C;
+        color: #FFFFFF;
+        border: 1px solid #DB5A3C;
+    }
+}
+
+.pinterest {
+    color: #111111;
+    background-color: #FFF;
+    &:hover {
+        background-color: #DB5A3C;
+        color: #FFFFFF;
+        border: 1px solid #DB5A3C;
+    }
+}
+
+.promotion_text {
+    p {
+        text-align: center;
+        padding: 20px 0 40px 0;
+        color: #767676;
+    }
+}
+
+.promotion {
+    text-align: center;
+    margin: 50px;
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+/* End Section Team */
