--- a/7.7/sass/style.scss
+++ b/7.7/sass/style.scss
@@ -546,3 +546,14 @@ header {
 }
 
 /* End Section Contact */
+
+/* Section Footer */
+
+.footer {
+    padding: 20px;
+    text-align: center;
+    font-family: $fonts;
+    color: #767676;
+}
+
+/* End Section Footer */
