--- a/7.7/css/style.css
+++ b/7.7/css/style.css
@@ -567,5 +567,154 @@ header .main .button {
 }
 
 /* End Section Footer */
+/* Media */
+@media (max-width: 767px) {
+  .col-s-1 {
+    width: 8.33%;
+  }
+  .col-s-2 {
+    width: 16.66%;
+  }
+  .col-s-3 {
+    width: 25%;
+  }
+  .col-s-4 {
+    width: 33.33%;
+  }
+  .col-s-5 {
+    width: 41.66%;
+  }
+  .col-s-6 {
+    width: 50%;
+  }
+  .col-s-7 {
+    width: 58.33%;
+  }
+  .col-s-8 {
+    width: 66.66%;
+  }
+  .col-s-9 {
+    width: 75%;
+  }
+  .col-s-10 {
+    width: 83.33%;
+  }
+  .col-s-11 {
+    width: 91.66%;
+  }
+  .col-s-12 {
+    width: 100%;
+  }
+  /* Media */
+  header {
+    height: auto;
+    width: 100%;
+    padding-bottom: 30px;
+    text-align: center;
+  }
+  header nav ul {
+    float: none;
+  }
+  header nav ul li {
+    display: block;
+  }
+  header nav ul li a {
+    padding: 15px 12px;
+  }
+  header .main h1 {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+  header .main p {
+    font-size: 25px;
+  }
+  header .main .button {
+    margin: 30px auto 0 auto;
+  }
+  .services .serv h1 {
+    font-size: 30px;
+    margin-top: 50px;
+  }
+  .services .serv p {
+    font-size: 18px;
+    margin-top: -20px;
+  }
+  .services .services_img {
+    margin-top: 50px;
+  }
+  .services .services_img h1 {
+    padding: 10px;
+    font-size: 18px;
+  }
+  .portfolio {
+    padding-top: 20px;
+    padding-bottom: 40px;
+  }
+  .portfolio .portfolio_header h1 {
+    margin-top: 10px;
+    font-size: 30px;
+  }
+  .portfolio .portfolio_header p {
+    font-size: 18px;
+    margin-top: -20px;
+    padding-bottom: 10px;
+  }
+  .about {
+    margin-top: 10px;
+  }
+  .about hr {
+    display: none;
+  }
+  .about .about_header h1 {
+    padding-top: 20px;
+    font-size: 30px;
+  }
+  .about .about_header p {
+    font-size: 18px;
+    margin-top: -30px;
+    padding-bottom: 50px;
+  }
+  .team .team_header h1 {
+    font-size: 30px;
+    padding-top: 80px;
+  }
+  .team .team_header p {
+    font-size: 18px;
+    margin-top: -30px;
+    padding-bottom: 30px;
+  }
+  .team_img {
+    padding-bottom: 20px;
+  }
+  .promotion_text {
+    padding: 0 20px;
+  }
+  .promotion img {
+    padding: 10px;
+  }
+  .contact h1 {
+    font-size: 30px;
+    padding-top: 50px;
+  }
+  .contact p {
+    font-size: 18px;
+    margin-top: -30px;
+    padding-bottom: 30px;
+  }
+  .contact input {
+    width: 100%;
+    height: 50px;
+    border-radius: 5px;
+    font-size: 20px;
+    margin: 15px 20px;
+  }
+  .contact textarea {
+    width: 100%;
+    height: 100px;
+    margin: 15px 20px;
+    border-radius: 5px;
+    font-size: 20px;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
