--- a/7.7/sass/style.scss
+++ b/7.7/sass/style.scss
@@ -557,3 +557,179 @@ header {
 }
 
 /* End Section Footer */
+
+/* Media */
+
+@media (max-width: 767px) {
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+
+    /* Media */
+
+    header {
+        height: auto;
+        width: 100%;
+        padding-bottom: 30px;
+        text-align: center;
+
+        nav {
+            ul {
+                float: none;
+
+                li {
+                    display: block;
+
+                    a {
+                        padding: 15px 12px;
+                    }
+                }
+            }
+        }
+
+        .main {
+            h1 {
+                margin-top: 20px;
+                font-size: 20px;
+            }
+
+            p {
+                font-size: 25px;
+            }
+
+            .button {
+                margin: 30px auto 0 auto;
+            }
+        }
+    }
+
+    .services {
+        .serv {
+            h1 {
+                font-size: 30px;
+                margin-top: 50px;
+            }
+
+            p {
+                font-size: 18px;
+                margin-top: -20px;
+            }
+        }
+
+        .services_img {
+            margin-top: 50px;
+
+            h1 {
+                padding: 10px;
+                font-size: 18px;
+            }
+        }
+    }
+
+    .portfolio {
+        padding-top: 20px;
+        padding-bottom: 40px;
+
+        .portfolio_header {
+            h1 {
+                margin-top: 10px;
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 18px;
+                margin-top: -20px;
+                padding-bottom: 10px;
+            }
+        }
+    }
+
+    .about {
+        margin-top: 10px;
+
+        hr {
+            display: none;
+        }
+
+        .about_header {
+            h1 {
+                padding-top: 20px;
+                font-size: 30px;
+            }
+
+            p {
+                font-size: 18px;
+                margin-top: -30px;
+                padding-bottom: 50px;
+            }
+        }
+    }
+
+    .team {
+        .team_header {
+            h1 {
+                font-size: 30px;
+                padding-top: 80px;
+            }
+
+            p {
+                font-size: 18px;
+                margin-top: -30px;
+                padding-bottom: 30px;
+            }
+        }
+    }
+
+    .team_img {
+        padding-bottom: 20px;
+    }
+
+    .promotion_text {
+        padding: 0 20px;
+    }
+
+    .promotion {
+        img {
+            padding: 10px;
+        }
+    }
+
+    .contact {
+        h1 {
+            font-size: 30px;
+            padding-top: 50px;
+        }
+
+        p {
+            font-size: 18px;
+            margin-top: -30px;
+            padding-bottom: 30px;
+        }
+
+        input {
+            width: 100%;
+            height: 50px;
+            border-radius: 5px;
+            font-size: 20px;
+            margin: 15px 20px;
+        }
+
+        textarea {
+            width: 100%;
+            height: 100px;
+            margin: 15px 20px;
+            border-radius: 5px;
+            font-size: 20px;
+        }
+    }
+
+}
